--- a/StockPro/res/values/strings.xml
+++ b/StockPro/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">StockPro</string>
+    <string name="app_name">StockPortfolio</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_stock_quote">StockQuoteActivity</string>
     <string name="title_activity_manage_portfolio">ManagePortfolioActivity</string>
